Refactor CommandManager to implement TabCompleter and enhance tab completion functionality